# LC_hypercomplex

./: .editorconfig  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/LC/hyperxomplex/: Quaternion.hpp
